added hud renderer and hotkey

--- a/Example Mod/gradle.properties
+++ b/Example Mod/gradle.properties
@@ -9,9 +9,9 @@ loader_version = 0.14.9
 fabric_version = 0.62.0+1.19.2
 loom_version = 1.0-SNAPSHOT
 # Mod Properties
-mod_version = 1.0.0
-maven_group = com.author
-archives_base_name = mod-name
+mod_version = 1.0.0-1.19.2
+maven_group = com.fracta7
+archives_base_name = inventory-tweaks
 # Kotlin
-systemProp.kotlin_version = 1.7.20
+systemProp.kotlin_version = 1.7.10
 fabric_language_kotlin_version = 1.8.4+kotlin.1.7.20
